# dtc-ml-zoomcamp-capstone-project

./: .gitignore  Dockerfile  README.md  notebook.ipynb  pyproject.toml
app/: lambda_function.py  schemas.py
infra/: template.yaml
models/: model.json  preprocessor.pkl
scripts/: train.py
